--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,16 @@
-REACT_APP_NETWORK_URL="https://data-seed-prebsc-1-s3.binance.org"
 REACT_APP_NODE_1 = "https://data-seed-prebsc-1-s3.binance.org"
 REACT_APP_NODE_2 = "https://data-seed-prebsc-1-s2.binance.org"
 REACT_APP_NODE_3 = "https://data-seed-prebsc-1-s3.binance.org"
+
 REACT_APP_HECO_NODE_1 = "https://http-testnet.hecochain.com"
+
+REACT_APP_MATIC_NODE_1 = "https://rpc-mumbai.matic.today"
+REACT_APP_MATIC_NODE_2 = "https://rpc-mumbai.maticvigil.com"
 
 REACT_APP_CHAIN_ID="256"
 REACT_APP_ROUTER_ADDRESS="0x354bc1cFe9959b96beD409859a726263C6C56C81"
 REACT_APP_FACTORY_ADDRESS="0x5B7592997eF6Dc590cB104147E28B174923f72dE"
+
 REACT_APP_HOME_URL="https://dev.gravis.finance"
 REACT_APP_INFO_URL="https://infodev.gravis.finance"
 REACT_APP_BIG_BANG_URL="https://bbndev.gravis.finance"
