--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,16 @@
-REACT_APP_NETWORK_URL="https://bsc-dataseed1.defibit.io"
 REACT_APP_NODE_1 = "https://bsc-dataseed1.ninicoin.io"
 REACT_APP_NODE_2 = "https://bsc-dataseed1.defibit.io"
 REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
+
 REACT_APP_HECO_NODE_1 = "https://http-mainnet.hecochain.com"
+
+REACT_APP_MATIC_NODE_1 = "https://rpc-mainnet.matic.network"
+REACT_APP_MATIC_NODE_2 = "https://rpc-mainnet.maticvigil.com"
 
 REACT_APP_CHAIN_ID="128"
 REACT_APP_ROUTER_ADDRESS="0x03a2F8F90B219732757472BB54801a82f33A8d0D"
 REACT_APP_FACTORY_ADDRESS="0x4a3B76860C1b76f0403025485DE7bfa1F08C48fD"
+
 REACT_APP_HOME_URL="https://gravis.finance"
 REACT_APP_INFO_URL="https://info.gravis.finance"
 REACT_APP_BIG_BANG_URL="https://bigbang.gravis.finance"
