--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@ethersproject/experimental": "^5.0.1",
     "@gravis.finance/sdk": "^1.0.11",
-    "@gravis.finance/uikit": "1.1.99",
+    "@gravis.finance/uikit": "1.2.3",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
@@ -77,8 +77,7 @@
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typeface-inter": "^3.15.1",
-    "typescript": "^4.1.3",
-    "use-debounce": "^7.0.0"
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
