--- a/package.json
+++ b/package.json
@@ -80,9 +80,11 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.14.5",
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
     "@types/jest": "^26.0.20",
     "@types/testing-library__cypress": "^5.0.8",
+    "babel-plugin-parse-translation": "^1.0.2",
     "cypress": "^4.11.0",
     "eslint": "^7.2.0",
     "prettier": "^2.1.2",
@@ -109,7 +111,8 @@
     "integration-test:dev": "start-server-and-test start 3000 cy:run:dev",
     "cy:run:dev": "cypress run",
     "pup-test:dev": "jest --config tests/jest.config.ts",
-    "analyze": "node ./scripts/bundle-analyze"
+    "analyze": "node ./scripts/bundle-analyze",
+    "locales": "babel --extensions \".tsx\" --config-file ./babel-locales.config.js ./src"
   },
   "browserslist": {
     "production": [
