Added menu links

--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,8 @@ REACT_APP_FACTORY_ADDRESS="0x5B7592997eF6Dc590cB104147E28B174923f72dE"
 REACT_APP_HOME_URL="https://dev.gravis.finance"
 REACT_APP_INFO_URL="https://infodev.gravis.finance"
 REACT_APP_BIG_BANG_URL="https://bbndev.gravis.finance"
+REACT_APP_GMART_URL="https://gmartdev.gravis.finance"
+REACT_APP_NFTFARMING_URL="https://nftfarmingdev.gravis.finance"
 
 TEST_ENV="development"
 REACT_APP_NODE_ENV="development"
