--- a/.env.production
+++ b/.env.production
@@ -14,6 +14,8 @@ REACT_APP_FACTORY_ADDRESS="0x4a3B76860C1b76f0403025485DE7bfa1F08C48fD"
 REACT_APP_HOME_URL="https://gravis.finance"
 REACT_APP_INFO_URL="https://info.gravis.finance"
 REACT_APP_BIG_BANG_URL="https://bigbang.gravis.finance"
+REACT_APP_GMART_URL="https://gmart.gravis.finance"
+REACT_APP_NFTFARMING_URL="https://nftfarming.gravis.finance"
 
 TEST_ENV="production"
 REACT_APP_NODE_ENV="production"
