Added Menu links

--- a/.env.development
+++ b/.env.development
@@ -17,5 +17,7 @@ REACT_APP_BIG_BANG_URL="https://bbndev.gravis.finance"
 REACT_APP_GMART_URL="https://gmartdev.gravis.finance"
 REACT_APP_NFTFARMING_URL="https://nftfarmingdev.gravis.finance"
 
+REACT_APP_CAPTAINS_URL="https://captainsdev.gravis.finance"
+
 TEST_ENV="development"
 REACT_APP_NODE_ENV="development"
