--- a/.env.production
+++ b/.env.production
@@ -17,5 +17,7 @@ REACT_APP_BIG_BANG_URL="https://bigbang.gravis.finance"
 REACT_APP_GMART_URL="https://gmart.gravis.finance"
 REACT_APP_NFTFARMING_URL="https://nftfarming.gravis.finance"
 
+REACT_APP_CAPTAINS_URL="https://captains.gravis.finance"
+
 TEST_ENV="production"
 REACT_APP_NODE_ENV="production"
