--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,8 @@ build:
         - builder
         - docker-executor
     script:
-        - yarn global add dotenv-cli
         - yarn install
-        - yarn build
+        - yarn build:dev
     artifacts:
         expire_in: 1 week
         paths:
@@ -22,4 +21,4 @@ deploy_develop:
       - dev
       - deploy-runner
     script:
-        - rsync -a ./build/* /var/www/swap-interface-stage
+        - rsync -a ./build/* /var/www/swap-interface/dev
