--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ build:
     script:
         - yarn global add dotenv-cli
         - yarn install
-        - yarn build
+        - yarn build:dev
     artifacts:
         expire_in: 1 week
         paths:
@@ -22,4 +22,4 @@ deploy_develop:
       - dev
       - deploy-runner
     script:
-        - rsync -a ./build/* /var/www/swap-interface-stage
+        - rsync -a ./build/* /var/www/swap-interface/dev
