--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,23 +4,23 @@ stages:
 build:
     stage: build
     image: node:12-buster
-    tags: &b_runner 
+    tags: &b_runner
         - builder
         - docker-executor
     script:
         - yarn global add dotenv-cli
         - yarn install
-        - yarn build:dev
+        - yarn build
     artifacts:
         expire_in: 1 week
         paths:
             - build
 deploy_develop:
     stage: deploy
-    tags: 
-      - shell
-      - prod
-      - deploy-runner
+    tags:
+        - shell
+        - prod
+        - deploy-runner
     when: manual
     script:
         - rsync -a ./build/* /var/www/swap-interface/build
