Add lottbox links

--- a/.env.production
+++ b/.env.production
@@ -16,6 +16,7 @@ REACT_APP_INFO_URL="https://info.gravis.finance"
 REACT_APP_BIG_BANG_URL="https://bigbang.gravis.finance"
 REACT_APP_GMART_URL="https://gmart.gravis.finance"
 REACT_APP_NFTFARMING_URL="https://nftfarming.gravis.finance"
+REACT_APP_ASTEROID_MINING_URL="https://asteroid-mining.gravis.finance/"
 
 REACT_APP_CAPTAINS_URL="https://captains.gravis.finance"
 
