--- a/.env.production
+++ b/.env.production
@@ -18,6 +18,7 @@ REACT_APP_GMART_URL="https://gmart.gravis.finance"
 REACT_APP_NFTFARMING_URL="https://nftfarming.gravis.finance"
 
 REACT_APP_CAPTAINS_URL="https://captains.gravis.finance"
+REACT_APP_ASTEROID_MINING_URL="https://asteroid-mining.gravis.finance"
 
 TEST_ENV="production"
 REACT_APP_NODE_ENV="production"
