--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ deploy_develop:
         - develop
     tags: 
       - shell
-      - prod
+      - dev
       - deploy-runner
     script:
         - rsync -a ./build/* /var/www/swap-interface/dev
@@ -82,3 +82,4 @@ deploy_production:
     when: manual
     script:
         - rsync -a ./build/* /var/www/swap-interface/build
+
