--- a/.env.development
+++ b/.env.development
@@ -17,6 +17,7 @@ REACT_APP_BIG_BANG_URL="https://bbndev.gravis.finance"
 REACT_APP_GMART_URL="https://gmartdev.gravis.finance"
 REACT_APP_NFTFARMING_URL="https://nftfarmingdev.gravis.finance"
 REACT_APP_ASTEROID_MINING_URL="https://asteroid-miningdev.gravis.finance"
+REACT_APP_FARMING_URL="https://farmingdev.gravis.finance"
 
 REACT_APP_CAPTAINS_URL="https://captainsdev.gravis.finance"
 REACT_APP_ASTEROID_MINING_URL="https://asteroid-miningdev.gravis.finance"
