--- a/.env.production
+++ b/.env.production
@@ -14,13 +14,12 @@ REACT_APP_FACTORY_ADDRESS="0x4a3B76860C1b76f0403025485DE7bfa1F08C48fD"
 REACT_APP_HOME_URL="https://gravis.finance"
 REACT_APP_INFO_URL="https://info.gravis.finance"
 REACT_APP_BIG_BANG_URL="https://bigbang.gravis.finance"
-REACT_APP_GMART_URL="https://gmart.gravis.finance"
+REACT_APP_GMART_URL="https://gmart.io"
 REACT_APP_NFTFARMING_URL="https://nftfarming.gravis.finance"
-REACT_APP_ASTEROID_MINING_URL="https://asteroid-mining.gravis.finance/"
 REACT_APP_FARMING_URL="https://farming.gravis.finance"
 
 REACT_APP_CAPTAINS_URL="https://captains.gravis.finance"
-REACT_APP_ASTEROID_MINING_URL="https://asteroid-mining.gravis.finance"
+REACT_APP_ASTEROID_MINING_URL="https://evervo.id"
 
 TEST_ENV="production"
 REACT_APP_NODE_ENV="production"
