--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "@binance-chain/bsc-connector": "^1.0.0",
-    "@crowdin/crowdin-api-client": "^1.8.16",
-    "@ethersproject/experimental": "^5.0.1",
-    "@gravis.finance/sdk": "^1.0.12",
+    "@ethersproject/abi": "5.3.0",
+    "@ethersproject/bignumber": "5.3.0",
+    "@ethersproject/bytes": "5.3.0",
+    "@ethersproject/contracts": "5.3.0",
+    "@ethersproject/hash": "5.3.0",
+    "@ethersproject/providers": "5.3.0",
+    "@ethersproject/strings": "5.3.0",
+    "@ethersproject/units": "5.3.0",
+    "@gravis.finance/sdk": "^1.0.16",
     "@gravis.finance/uikit": "^1.2.99",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
@@ -31,26 +37,22 @@
     "@types/react-window": "^1.8.2",
     "@types/rebass": "^4.0.7",
     "@types/styled-components": "^5.1.7",
-    "@uniswap/default-token-list": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.16",
-    "@uniswap/v2-core": "1.0.0",
-    "@web3-react/core": "^6.0.9",
+    "@web3-react/core": "^6.1.9",
     "@web3-react/fortmatic-connector": "^6.0.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/portis-connector": "^6.0.9",
-    "@web3-react/walletconnect-connector": "^6.1.1",
-    "@web3-react/walletlink-connector": "^6.0.9",
+    "@web3-react/walletconnect-connector": "6.2.0",
     "ajv": "^6.12.3",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "dotenv": "^8.2.0",
-    "ethers": "^5.1.4",
+    "ethers": "5.5.1",
     "fast-text-encoding": "^1.0.3",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
     "inter-ui": "^3.13.1",
-    "jazzicon": "^1.5.0",
     "jest-canvas-mock": "^2.3.1",
     "jest-svg-transformer": "^1.0.0",
     "lodash.flatmap": "^4.5.0",
@@ -62,7 +64,6 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
     "react-i18next": "^10.7.0",
-    "react-lottie-player": "^1.3.1",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.0",
@@ -72,7 +73,6 @@
     "react-window": "^1.8.5",
     "rebass": "^4.0.7",
     "redux-localstorage-simple": "^2.3.1",
-    "save": "^2.4.0",
     "styled-components": "^5.2.1",
     "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
@@ -92,9 +92,6 @@
     "serve": "^11.3.0",
     "start-server-and-test": "^1.11.0",
     "webpack-bundle-analyzer": "^4.4.2"
-  },
-  "resolutions": {
-    "@walletconnect/web3-provider": "1.1.1-alpha.0"
   },
   "scripts": {
     "start": "react-scripts start",
