Added bridge to menu

--- a/.env.development
+++ b/.env.development
@@ -22,5 +22,7 @@ REACT_APP_FARMING_URL="https://farmingdev.gravis.finance"
 REACT_APP_CAPTAINS_URL="https://captainsdev.gravis.finance"
 REACT_APP_ASTEROID_MINING_URL="https://asteroid-miningdev.gravis.finance"
 
+REACT_APP_BRIDGE_URL="https://bridgedev.gravis.finance"
+
 TEST_ENV="development"
 REACT_APP_NODE_ENV="development"
