--- a/.env.production
+++ b/.env.production
@@ -18,6 +18,8 @@ REACT_APP_GMART_URL="https://gmart.io"
 REACT_APP_NFTFARMING_URL="https://nftfarming.gravis.finance"
 REACT_APP_FARMING_URL="https://farming.gravis.finance"
 
+REACT_APP_BRIDGE_URL="https://bridge.gravis.finance"
+
 REACT_APP_CAPTAINS_URL="https://captains.gravis.finance"
 REACT_APP_ASTEROID_MINING_URL="https://evervo.id"
 
