--- a/.env.development
+++ b/.env.development
@@ -23,6 +23,7 @@ REACT_APP_CAPTAINS_URL="https://captainsdev.gravis.finance"
 REACT_APP_ASTEROID_MINING_URL="https://asteroid-miningdev.gravis.finance"
 
 REACT_APP_BRIDGE_URL="https://bridgedev.gravis.finance"
+REACT_APP_PUBLIC_ROUND_URL="https://publicdev.gravis.finance"
 
 TEST_ENV="development"
 REACT_APP_NODE_ENV="development"
