--- a/.env.production
+++ b/.env.production
@@ -22,6 +22,7 @@ REACT_APP_BRIDGE_URL="https://bridge.gravis.finance"
 
 REACT_APP_CAPTAINS_URL="https://captains.gravis.finance"
 REACT_APP_ASTEROID_MINING_URL="https://evervo.id"
+REACT_APP_PUBLIC_ROUND_URL="https://public.gravis.finance"
 
 TEST_ENV="production"
 REACT_APP_NODE_ENV="production"
