updated uikit version

--- a/.env.development
+++ b/.env.development
@@ -27,3 +27,6 @@ REACT_APP_PUBLIC_ROUND_URL="https://publicdev.gravis.finance"
 
 TEST_ENV="development"
 REACT_APP_NODE_ENV="development"
+
+REACT_APP_PROFILE_API_URL=https://profiles-backend-dev.gravis.finance
+REACT_APP_PROFILE_IMG_URL=https://profiles-backend-dev.gravis.finance/images
