--- a/.env.production
+++ b/.env.production
@@ -26,3 +26,6 @@ REACT_APP_PUBLIC_ROUND_URL="https://public.gravis.finance"
 
 TEST_ENV="production"
 REACT_APP_NODE_ENV="production"
+
+REACT_APP_PROFILE_API_URL=https://profiles-backend.gravis.finance
+REACT_APP_PROFILE_IMG_URL=https://profiles-backend.gravis.finance/images
