--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@web3-react/portis-connector": "^6.0.9",
     "@web3-react/walletconnect-connector": "6.2.0",
     "ajv": "^6.12.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
     "dotenv": "^8.2.0",
