--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@ethersproject/strings": "5.3.0",
     "@ethersproject/units": "5.3.0",
     "@gravis.finance/sdk": "^1.0.16",
-    "@gravis.finance/uikit": "1.3.92",
+    "@gravis.finance/uikit": "1.3.98",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
@@ -88,6 +88,7 @@
     "@types/testing-library__cypress": "^5.0.8",
     "babel-plugin-parse-translation": "^1.0.2",
     "cypress": "^4.11.0",
+    "dotenv-cli": "^5.1.0",
     "eslint": "^7.2.0",
     "prettier": "^2.1.2",
     "qs": "^6.9.4",
