--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@ethersproject/strings": "5.3.0",
     "@ethersproject/units": "5.3.0",
     "@gravis.finance/sdk": "^1.0.16",
-    "@gravis.finance/uikit": "1.3.98",
+    "@gravis.finance/uikit": "1.3.104",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
@@ -82,6 +82,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "babel-loader": "8.1.0",
     "@babel/preset-typescript": "^7.14.5",
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
     "@types/jest": "^26.0.20",
