--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@ethersproject/strings": "5.3.0",
     "@ethersproject/units": "5.3.0",
     "@gravis.finance/sdk": "^1.0.16",
-    "@gravis.finance/uikit": "1.3.98",
+    "@gravis.finance/uikit": "1.3.105",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
@@ -95,6 +95,9 @@
     "serve": "^11.3.0",
     "start-server-and-test": "^1.11.0",
     "webpack-bundle-analyzer": "^4.4.2"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
