--- a/package.json
+++ b/package.json
@@ -86,11 +86,18 @@
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
     "@types/jest": "^26.0.20",
     "@types/testing-library__cypress": "^5.0.8",
+    "axios": "^0.27.2",
+    "babel-loader": "8.1.0",
     "babel-plugin-parse-translation": "^1.0.2",
-    "cypress": "^4.11.0",
+    "cross-env": "^7.0.3",
+    "cross-zip": "^4.0.0",
+    "cypress": "^10.1.0",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.2.0",
+    "eslint-plugin-chai-friendly": "^0.7.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "prettier": "^2.1.2",
+    "puppeteer-core": "^14.4.0",
     "qs": "^6.9.4",
     "serve": "^11.3.0",
     "start-server-and-test": "^1.11.0",
@@ -109,13 +116,11 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "integration-test": "start-server-and-test start 3000 cy:run",
-    "cy:run": "cypress run --env test_env=prod",
-    "integration-test:dev": "start-server-and-test start 3000 cy:run:dev",
-    "cy:run:dev": "cypress run",
     "pup-test:dev": "jest --config tests/jest.config.ts",
     "analyze": "node ./scripts/bundle-analyze",
-    "locales": "babel --extensions \".tsx\",\".ts\"  --config-file ./babel-locales.config.js ./src"
+    "locales": "babel --extensions \".tsx\",\".ts\"  --config-file ./babel-locales.config.js ./src",
+    "cy:open": "cross-env CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open",
+    "cy:run": "cross-env CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome"
   },
   "browserslist": {
     "production": [
