--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
 
 REACT_APP_HECO_NODE_1 = "https://http-mainnet.hecochain.com"
 
-REACT_APP_MATIC_NODE_1 = "https://rpc-mainnet.matic.network"
+REACT_APP_MATIC_NODE_1 = "https://polygon-rpc.com"
 REACT_APP_MATIC_NODE_2 = "https://rpc-mainnet.maticvigil.com"
 
 REACT_APP_CHAIN_ID="56"
