--- a/package.json
+++ b/package.json
@@ -84,14 +84,14 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
     "@pancakeswap-libs/eslint-config-pancake": "1.0.0",
-    "@shelex/cypress-allure-plugin": "^2.26.5",
+    "@shelex/cypress-allure-plugin": "2.28.0",
     "@types/jest": "^26.0.20",
     "@types/testing-library__cypress": "^5.0.8",
     "allure-commandline": "^2.17.2",
     "babel-loader": "8.1.0",
     "babel-plugin-parse-translation": "^1.0.2",
     "cross-env": "^7.0.3",
-    "cypress": "^10.1.0",
+    "cypress": "10.1.0",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.2.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
@@ -101,6 +101,7 @@
     "qs": "^6.9.4",
     "serve": "^11.3.0",
     "start-server-and-test": "^1.11.0",
+    "web3": "^1.7.4",
     "webpack-bundle-analyzer": "^4.4.2"
   },
   "resolutions": {
@@ -120,10 +121,10 @@
     "analyze": "node ./scripts/bundle-analyze",
     "locales": "babel --extensions \".tsx\",\".ts\"  --config-file ./babel-locales.config.js ./src",
     "cy:open": "cross-env CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress open",
-    "cy:run": "cross-env CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --browser chrome --env allure=true",
+    "cy:run": "cross-env CYPRESS_REMOTE_DEBUGGING_PORT=9222 cypress run --headed --env allure=true --browser chrome",
     "cy:allureGenerate": "allure generate allure-results --clean -o allure-report",
     "cy:allureOpen": "allure open",
-    "cy:allureClear": "rm -r allure-results/ allure-report cypress/screenshots cypress/videos || true"
+    "cy:allureClear": "rm -r allure-results/ allure-report autotests/screenshots autotests/videos || true"
   },
   "browserslist": {
     "production": [
